--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^2.3.1
   flutter_spinkit: ^5.1.0
   move_to_background: ^1.0.2
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
