--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   move_to_background: ^1.0.2
   cloud_firestore: ^3.1.10
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
