--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^3.1.10
   get: ^4.6.1
   get_storage: ^2.0.3
+  firebase_database: ^9.0.8
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
