--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   get_storage: ^2.0.3
   firebase_database: ^9.0.8
   fluttertoast: ^8.0.9
+  image_picker: ^0.8.4+11
+  firebase_storage: ^10.2.9
+  file_picker: ^4.5.1
+  liquid_progress_indicator: ^0.4.0
 
 dev_dependencies:
   flutter_test:
