--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   firebase_storage: ^10.2.9
   file_picker: ^4.5.1
   liquid_progress_indicator: ^0.4.0
+  firebase_messaging: ^11.2.14
+  platform_device_id: ^1.0.1
 
 dev_dependencies:
   flutter_test:
