App security and permissions developed
1. User verification and accessibility management added
2. Internet Permission for Android App is added
3. Control panal and user managment added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.roshanpaturkar.d3broomsticks.the_three_broomsticks">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="D3Broomsticks"
         android:name="${applicationName}"
